# symphony

./: AGENTS.md  README.md  SPEC.md
.github/workflows/: go.yml  make-all.yml  rust.yml
docs/: TODO.md  workflow.schema.json
elixir/: README.md  mix.exs
elixir/lib/symphony_elixir/: cli.ex  orchestrator.ex  status_dashboard.ex
elixir/lib/symphony_elixir/codex/: app_server.ex
elixir/lib/symphony_elixir/config/: schema.ex
elixir/test/symphony_elixir/: app_server_test.exs  core_test.exs  extensions_test.exs  observability_pubsub_test.exs  orchestrator_status_test.exs  ssh_test.exs  status_dashboard_snapshot_test.exs  workspace_and_config_test.exs
go/: Makefile  README.md  go.mod  go.sum
go/cmd/symphony/: main.go
go/internal/backend/anthropicmessages/: anthropicmessages.go  anthropicmessages_test.go
go/internal/backend/claudecode/: claudecode.go  claudecode_test.go
go/internal/backend/codex/: codex.go  codex_test.go
go/internal/backend/openaicompat/: openaicompat.go  openaicompat_test.go
go/internal/config/: config.go  load.go  load_test.go  validate.go
go/internal/dispatch/: dispatch.go  dispatch_test.go
go/internal/issue/: issue.go
go/internal/orchestrator/: orchestrator.go  orchestrator_test.go  worker.go
go/internal/prompt/: prompt.go  prompt_test.go
go/internal/server/: server.go  server_test.go  sse.go
go/internal/state/: cost.go  cost_test.go  events.go  events_test.go  state.go
go/internal/store/: memory.go  store.go
go/internal/store/postgres/: migrations.go  store.go  store_test.go
go/internal/tracker/: memory.go  tracker.go
go/internal/tracker/github/: github.go  github_test.go
go/internal/tracker/linear/: linear.go  linear_test.go
go/internal/workspace/: workspace.go  workspace_test.go
rust/: Cargo.toml  README.md
rust/crates/symphony-claude-code/: Cargo.toml
rust/crates/symphony-claude-code/src/: client.rs  lib.rs
rust/crates/symphony-cli/: Cargo.toml
rust/crates/symphony-cli/src/: doctor.rs  logs.rs  main.rs
rust/crates/symphony-cli/tests/: cli_smoke.rs
rust/crates/symphony-codex/: Cargo.toml
rust/crates/symphony-codex/src/: channel.rs  client.rs  errors.rs  events.rs  lib.rs  tools.rs
rust/crates/symphony-codex/tests/: live_codex.rs
rust/crates/symphony-core/: Cargo.toml
rust/crates/symphony-core/src/: config.rs  errors.rs  issue.rs  lib.rs  prompt.rs  sanitize.rs  watcher.rs  workflow.rs
rust/crates/symphony-core/tests/: workflow_schema.rs
rust/crates/symphony-core/tests/fixtures/: anthropic_messages_opus.md  claude_code_full.md  codex_minimal.md  codex_with_budget.md  github_minimal.md  invalid_github_missing_repo.md  invalid_missing_openai_fields.md  invalid_negative_budget.md  invalid_unknown_backend.md  openai_compat_kimi.md
rust/crates/symphony-http/: Cargo.toml
rust/crates/symphony-http/src/: api.rs  lib.rs  server.rs
rust/crates/symphony-http/tests/: api_v1.rs
rust/crates/symphony-orchestrator/: Cargo.toml
rust/crates/symphony-orchestrator/src/: actor.rs  dispatch.rs  lib.rs  pricing.rs  runner.rs  state.rs  worker.rs  workspace_cleaner.rs
rust/crates/symphony-orchestrator/tests/: conformance.rs  orchestrator_actor.rs  real_worker.rs  real_worker_claude_code.rs
rust/crates/symphony-tracker/: Cargo.toml
rust/crates/symphony-tracker/src/: errors.rs  lib.rs  linear.rs  linear_tool.rs  memory.rs  tracker.rs
rust/crates/symphony-tracker/tests/: live_linear.rs
rust/crates/symphony-workspace/: Cargo.toml
rust/crates/symphony-workspace/src/: errors.rs  hooks.rs  lib.rs  manager.rs  path_safety.rs
