[workspace]
resolver = "2"
members = [
    "crates/symphony-core",
    "crates/symphony-tracker",
    "crates/symphony-codex",
    "crates/symphony-claude-code",
    "crates/symphony-workspace",
    "crates/symphony-orchestrator",
    "crates/symphony-http",
    "crates/symphony-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/noeljackson/symphony"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
time = { version = "0.3", features = ["serde-well-known", "formatting", "parsing", "macros"] }
notify = "6"
notify-debouncer-mini = "0.4"
liquid = "0.26"
liquid-core = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
regex = "1"
once_cell = "1"
shellexpand = "3"
dirs = "5"
nix = { version = "0.29", features = ["signal"] }

# In-workspace crates
symphony-core = { path = "crates/symphony-core" }
symphony-tracker = { path = "crates/symphony-tracker" }
symphony-codex = { path = "crates/symphony-codex" }
symphony-claude-code = { path = "crates/symphony-claude-code" }
symphony-workspace = { path = "crates/symphony-workspace" }
symphony-orchestrator = { path = "crates/symphony-orchestrator" }
symphony-http = { path = "crates/symphony-http" }

[profile.release]
lto = "thin"
codegen-units = 1
