[package]
name = "symphony-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "symphony"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
symphony-core.workspace = true
symphony-tracker.workspace = true
symphony-codex.workspace = true
symphony-workspace.workspace = true
symphony-orchestrator.workspace = true
symphony-http.workspace = true

[dev-dependencies]
tempfile = "3"
