[package]
name = "symphony-codex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "rt", "macros", "sync", "time"] }
tracing.workspace = true
time.workspace = true
async-trait.workspace = true
symphony-core.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
