[package]
name = "symphony-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["sync", "fs", "rt", "time", "macros"] }
tracing.workspace = true
time.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
liquid.workspace = true
liquid-core.workspace = true
regex.workspace = true
once_cell.workspace = true
shellexpand.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
