[package]
name = "symphony-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
time.workspace = true
async-trait.workspace = true
futures.workspace = true
symphony-core.workspace = true
symphony-tracker.workspace = true
symphony-codex.workspace = true
symphony-workspace.workspace = true
