[package]
name = "symphony-tracker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tracing.workspace = true
time.workspace = true
async-trait.workspace = true
reqwest.workspace = true
symphony-core.workspace = true
symphony-codex.workspace = true
